--- a/html/3d-gallery.html
+++ b/html/3d-gallery.html
@@ -6,7 +6,9 @@
     <title>我的作品集</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="frontend.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+
     <style>
         .card-group {
           display: flex;
@@ -31,8 +33,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-             <img src="images/OIP.jpg" alt="LOGO" style="height: 40px;">
-        </a>
+            <img src="images/OIP.jpg" alt="LOGO" style="height: 40px;">
+       </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -55,8 +57,8 @@
         </div>
       </nav>
     <header id="TOP" class="text-center p-5">
-        <h1>純美術作品 </h1>
-        <h1>FINE ART </h1>
+        <h1>3d建模作品 </h1>
+        <h1>3D ART</h1>
        
     </header>
     <div class="container mt-4">
@@ -64,9 +66,9 @@
     <div class="text-center mb-4">
     </div>
 
-    <div id="testfine" class="card-group">
+    <div id="test3d" class="card-group">
       <!-- 卡片內容 -->
-      <div v-for="item in fdart" class="card">
+      <div v-for="item in tdart" class="card">
         <img :src="'images/'+item.imgSrc" alt="Christmas Illustration">
         <div class="card-body">
           <h5 class="card-title">{{item.title}}</h5>
@@ -75,39 +77,38 @@
         </div>
       </div>
 
-  <!--  <div class="card-group">
-       卡片內容 
+   <!-- <div class="card-group">
       <div class="card">
-        <img src="images/IMG_20201013_211115.jpg" alt="HAND1">
+        <img src="images/場景渲染3.png" alt="3d work1">
         <div class="card-body">
-          <h5 class="card-title">AUTUMN</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">JAPAN SHRINE</h5>a
+          <p class="card-text">I love Japanese culture and architecture, and I love the shrine that glows at night, so I made this 3D model</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
       </div>
       <div class="card">
-        <img src="images/IMG_20201013_211231.jpg" alt="HAND2">
+        <img src="images/檯燈材質渲染2.jpg" alt="3d work2">
         <div class="card-body">
-          <h5 class="card-title">RED APPLE</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">LAMP</h5>
+          <p class="card-text">As a basis for exercising 3D modeling skills, a topic with easier difficulty was chosen, hence the creation of this table lamp</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
       </div>
       <div class="card">
-        <img src="images/chuang.png" alt="HAND3">
+        <img src="images/武器渲染3.jpg" alt="3d work3">
         <div class="card-body">
-          <h5 class="card-title">VIEW FROM THE WINDOW</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">KATANA</h5>
+          <p class="card-text">I love Japanese culture and architecture, and I love the samurai katana, so I made this 3D model</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
       </div>
-      -->
+    -->
+      
       <!-- 更多卡片... -->
     </div>
   </div>
 
-
 </body>
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-<script src="vue.js"></script>
+<script src="bs5vue.js"></script>
 </html>
