--- a/html/webdesign.html
+++ b/html/webdesign.html
@@ -6,6 +6,7 @@
     <title>我的作品集</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <style>
         body {
@@ -207,7 +208,7 @@
                     </button>
                 </div>
                     <br>
-                    <a href="digital-gallery.html" class="btn btn-dark mt-2">ANOTHER WORK</a>
+                    <a href="/html/digital-gallery.html" class="btn btn-dark mt-2">ANOTHER WORK</a>
                     <br>
                     <br>
 
