--- a/html/hand-gallery.html
+++ b/html/hand-gallery.html
@@ -67,7 +67,7 @@
 
     <div id="testfine" class="card-group">
       <!-- 卡片內容 -->
-      <div v-for="item in fdart" class="card">
+      <div v-for="item in testfine" class="card">
         <img :src="'images/'+item.imgSrc" alt="Christmas Illustration">
         <div class="card-body">
           <h5 class="card-title">{{item.title}}</h5>
