--- a/html/photo-gallery.html
+++ b/html/photo-gallery.html
@@ -56,8 +56,8 @@
         </div>
       </nav>
     <header id="TOP" class="text-center p-5">
-        <h1>電腦繪圖作品 </h1>
-        <h1>DIGITAL PAINTING </h1>
+        <h1>數位攝影作品 </h1>
+        <h1>PHOTOGRAPH </h1>
        
     </header>
     <div class="container mt-4">
@@ -67,7 +67,7 @@
 
     <div id="testphoto" class="card-group">
       <!-- 卡片內容 -->
-      <div v-for="item in pdart" class="card">
+      <div v-for="item in testphoto" class="card">
         <img :src="'images/'+item.imgSrc" alt="Christmas Illustration">
         <div class="card-body">
           <h5 class="card-title">{{item.title}}</h5>
