--- a/html/webdesign.html
+++ b/html/webdesign.html
@@ -208,7 +208,7 @@
                     </button>
                 </div>
                     <br>
-                    <a href="/html/digital-gallery.html" class="btn btn-dark mt-2">ANOTHER WORK</a>
+                    <a href="digital-gallery.html" class="btn btn-dark mt-2">ANOTHER WORK</a>
                     <br>
                     <br>
 
@@ -339,6 +339,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="vue.js"></script>
+    <script src="bs5vue.js"></script>
 </body>
 </html>
